Basic functions now work on the calculator. Not yet able to use negative numbers, multiple expressions, need to fix history box expanding (scrollbar?). Need to replace Back with symbol, add clear all function.

--- a/style.css
+++ b/style.css
@@ -13,9 +13,7 @@ html{
 .calc-container{
   display: flex;
   justify-content: space-between;
-  
-  /* margin: 25px; */
-  padding: 25px; 
+  padding: 25px;
 }
 
 .output-container{
@@ -23,6 +21,7 @@ html{
   flex-direction: column;
   justify-content: space-between;
   width: 300px;
+  flex-shrink: 0;
 }
 
 .output-container div{
@@ -34,8 +33,14 @@ html{
   text-align: right;
 }
 
+#output-current{
+  height: 23px;
+  flex: 0 0 auto;
+}
+
 #output-history{
   flex: 1 1 auto;
+  white-space: pre;
 }
 
 .central-buttons-container{
@@ -57,6 +62,7 @@ html{
 
 .buttons-container{
   background-color: cadetblue;
+  flex-shrink: 0;
   width: 400px;
   display: flex;
   flex-wrap: wrap;
